--- a/briar-android/src/main/res/values-fr/strings.xml
+++ b/briar-android/src/main/res/values-fr/strings.xml
@@ -1,14 +1,28 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <!--Setup-->
-  <string name="setup_title">Configuration de Briar</string>
-	<string name="choose_nickname">Choisir votre pseudonyme</string>
+  <string name="setup_title">Bienvenue à Briar</string>
+  <string name="setup_name_explanation">Votre pseudonyme sera affiché à côté de tout contenu que vous publierez. Vous pourrez le modifier après avoir créé votre compte.</string>
+  <string name="setup_next">Suivant</string>
+  <string name="setup_password_intro">Choisir un mot de passe</string>
+  <string name="setup_password_explanation">Votre compte Briar est enregistré chiffré sur votre appareil et non dans le nuage. Si vous désinstallez Briar ou oubliez votre mot de passe, il n’existe aucune façon de récupérer votre compte.\n\nChoisissez un mot de passe long qui sera difficile à deviner, par exemple quatre mots au hasard ou dix lettres, chiffres et symboles au hasard.</string>
+  <string name="setup_doze_title">Connexions d’arrière-plan</string>
+  <string name="setup_doze_intro">Pour recevoir des messages, Briar a besoin de rester connectée en arrière-plan.</string>
+  <string name="setup_doze_explanation">Pour recevoir des messages, Briar a besoin de rester connectée en arrière-plan. Veuillez désactiver les optimisations de la batterie afin que Briar puisse rester connectée.</string>
+  <string name="setup_doze_button">Autoriser les connexions</string>
+  <string name="choose_nickname">Choisir votre pseudonyme</string>
   <string name="choose_password">Choisir votre mot de passe</string>
   <string name="confirm_password">Confirmer votre mot de passe</string>
   <string name="name_too_long">Le nom est trop long</string>
   <string name="password_too_weak">Le mot de passe est trop faible</string>
   <string name="passwords_do_not_match">Les mots de passe ne correspondent pas</string>
   <string name="create_account_button">Créer un compte</string>
+  <string name="more_info">Plus d’informations</string>
+  <string name="don_t_ask_again">Ne plus demander</string>
+  <string name="setup_huawei_text">Veuillez toucher le bouton ci-dessous et vous assurer que Briar est protégée dans l’écran « Applis protégées ».</string>
+  <string name="setup_huawei_button">Protéger Briar</string>
+  <string name="setup_huawei_help">Si Briar n’est pas ajoutée à la liste des applis protégées, elle ne pourra pas fonctionner en arrière-plan.</string>
+  <string name="warning_dozed">%s n’a pas pu fonctionner en arrière-plan</string>
   <!--Login-->
   <string name="enter_password">Saisir votre mot de passe :</string>
   <string name="try_again">Le mot de passe est erroné, ressayez</string>
@@ -17,14 +31,17 @@
   <string name="dialog_title_lost_password">Mot de passe oublié</string>
   <string name="dialog_message_lost_password">Votre compte Briar est enregistré chiffré sur votre appareil, pas dans le nuage, et nous ne pouvons donc pas réinitialiser votre mot de passe. Voulez-vous supprimer votre compte et recommencer ?\n\nAttention : vos identités, contacts et messages seront perdus irrémédiablement.</string>
   <string name="startup_failed_notification_title">Impossible de démarrer Briar</string>
-  <string name="startup_failed_notification_text">Il vous faudra peut-être réinstaller Briar.</string>
+  <string name="startup_failed_notification_text">Toucher pour plus d’informations.</string>
   <string name="startup_failed_activity_title">Échec de démarrage de Briar</string>
-  <string name="startup_failed_db_error">Pour une raison indéterminée, votre base de données Briar est corrompue sans espoir de récupération. Vos comptes, données et contacts sont perdus. Vous devez malheureusement réinstaller Briar et configurer un nouveau compte.</string>
+  <string name="startup_failed_db_error">Pour quelque raison, votre base de données Briar est corrompue sans espoir de réparation. Votre compte, vos données et tous vos contacts sont perdus. Malheureusement, vous devez réinstaller Briar et créer un nouveau compte en choisissant « J’ai oublié mon mot de passe » dans l’invite de mot de passe.</string>
+  <string name="startup_failed_data_too_old_error">Votre compte a été créé avec une ancienne version de cette appli et ne peut pas être ouvert avec cette version. Vous devez soit installer l’ancienne version soit supprimer votre compte en choisissant « J’ai oublié mon mot de passe » dans l’invite de mot de passe.</string>
+  <string name="startup_failed_data_too_new_error">Cette version de l’appli est trop ancienne. Veuillez la mettre à niveau vers la dernière version et ressayer.</string>
   <string name="startup_failed_service_error">Briar n’a pas pu démarrer un greffon exigé. Réinstaller Briar résout généralement ce problème. Veuillez cependant noter que vous perdrez votre compte et toutes données relatives puisque Briar n’utilise pas de serveurs centralisés sur lesquels enregistrer vos données.</string>
   <plurals name="expiry_warning">
-    <item quantity="one">Ceci est une version bêta de Briar. Votre compte arrivera à expiration dans %d jour et ne peut pas être renouvelé.</item>
-    <item quantity="other">Ceci est une version bêta de Briar. Votre compte arrivera à expiration dans %d jours et ne peut pas être renouvelé.</item>
+    <item quantity="one">Ceci est une version de test de Briar. Votre compte arrivera à expiration dans %d jour et ne peut pas être renouvelé.</item>
+    <item quantity="other">Ceci est une version de test de Briar. Votre compte arrivera à expiration dans %d jours et ne peut pas être renouvelé.</item>
   </plurals>
+  <string name="expiry_update">La date de fin de test a été repoussée. Votre compte arrivera maintenant à expiration dans %d jours.</string>
   <string name="expiry_date_reached">Ce logiciel est arrivé à expiration.\nMerci de l’avoir testé !</string>
   <!--Navigation Drawer-->
   <string name="nav_drawer_open_description">Ouvrir le tiroir de navigation</string>
@@ -68,7 +85,8 @@
   <string name="delete">Supprimer</string>
   <string name="accept">Accepter</string>
   <string name="decline">Refuser</string>
-	<string name="online">En ligne</string>
+  <string name="options">Options</string>
+  <string name="online">En ligne</string>
   <string name="offline">Hors ligne</string>
   <string name="send">Envoyer</string>
   <string name="allow">Autoriser</string>
@@ -77,6 +95,9 @@
   <string name="ellipsis">...</string>
   <string name="text_too_long">Le texte saisi est trop long</string>
   <string name="show_onboarding">Afficher la fenêtre d’aide</string>
+  <string name="fix">Corriger</string>
+  <string name="help">Aide</string>
+  <string name="sorry">Désolé</string>
   <!--Contacts and Private Conversations-->
   <string name="no_contacts">Il semble que soyez nouveau ici, sans encore aucun contact.\n\nTouchez l’icône + en haut et suivez les instructions pour ajouter des amis à votre liste.\n\nVeuillez ne pas oublier que vous pouvez seulement ajouter des contacts en les rencontrant directement, afin d’éviter que quelqu’un se fasse passer pour vous et puisse lire vos messages à l’avenir.</string>
   <string name="date_no_private_messages">Aucun message.</string>
@@ -88,19 +109,21 @@
   <string name="contact_deleted_toast">Le contact a été supprimé</string>
   <!--Adding Contacts-->
   <string name="add_contact_title">Ajouter un contact</string>
-	<string name="face_to_face">Vous devez rencontrer la personne que vous voulez ajouter comme contact, afin d’éviter que quelqu’un se fasse passer pour vous et puisse lire vos messages à l’avenir.</string>
+  <string name="face_to_face">Vous devez rencontrer la personne que vous voulez ajouter comme contact, afin d’éviter que quelqu’un se fasse passer pour vous et puisse lire vos messages à l’avenir.</string>
   <string name="continue_button">Continuer</string>
-	<string name="connection_failed">Échec de connexion</string>
-	<string name="try_again_button">Ressayer</string>
-	<string name="waiting_for_contact_to_scan">En attente de lecture du code QR par le contact et de sa connexion\u2026</string>
+  <string name="connection_failed">Échec de connexion</string>
+  <string name="try_again_button">Ressayer</string>
+  <string name="waiting_for_contact_to_scan">En attente de lecture du code QR par le contact et de sa connexion\u2026</string>
   <string name="exchanging_contact_details">Échange des renseignements de contact\u2026</string>
-	<string name="contact_added_toast">Contact ajouté : %s</string>
+  <string name="contact_added_toast">Contact ajouté : %s</string>
   <string name="contact_already_exists">Le contact %s existe déjà</string>
   <string name="contact_exchange_failed">Échec d’échange de contacts</string>
   <string name="qr_code_invalid">Le code QR est invalide</string>
+  <string name="qr_code_unsupported">Le code QR que vous tentez de lire appartient à une ancienne version de %s qui n’est plus prise en charge.\n\nVeuillez vous assurer d’utiliser tous les deux la dernière version et ressayer.</string>
+  <string name="camera_error">Erreur de la caméra</string>
   <string name="connecting_to_device">Connexion à l’appareil\u2026</string>
   <string name="authenticating_with_device">Autentification avec l’appareil\u2026</string>
-  <string name="connection_aborted_local">Nous avons interrompu la connexion ! Cela pourrait signer que quelqu’un tente d’interférer avec votre connexion</string>
+  <string name="connection_aborted_local">La connexion a été interrompue ! Cela pourrait signifier que quelqu’un tente d’interférer avec votre connexion.</string>
   <string name="connection_aborted_remote">Votre contact a interrompu la connexion ! Cela pourrait signer que quelqu’un tente d’interférer avec votre connexion</string>
   <!--Introductions-->
   <string name="introduction_onboarding_title">Présenter vos contacts</string>
@@ -321,6 +344,7 @@
   <string name="notify_sound_setting_default">Sonnerie par défaut</string>
   <string name="notify_sound_setting_disabled">Aucun</string>
   <string name="choose_ringtone_title">Choisir une sonnerie</string>
+  <string name="cannot_load_ringtone">Impossible de charger la sonnerie</string>
   <!--Settings Feedback-->
   <string name="feedback_settings_title">Rétroaction</string>
   <string name="send_feedback">Envoyer une rétroaction</string>
@@ -349,5 +373,11 @@
   <string name="progress_title_logout">Déconnexion de Briar…</string>
   <!--Screen Filters & Tapjacking-->
   <string name="screen_filter_title">Une superposition d’écran a été détectée</string>
-  <string name="screen_filter_body">Une autre appli s’affiche par dessus Briar. Pour protéger votre sécurité, Briar ne répondra pas au toucher si autre appli s’affiche par dessus.\n\nEssayez de fermer les applis suivantes lorsque vous utilisez Briar :\n\n%1$s</string>
+  <string name="screen_filter_body">Une autre appli s’affiche par-dessus Briar. Pour protéger votre sécurité, Briar ne répondra pas au toucher si une autre appli s’affiche par-dessus.\n\nLes applis suivantes pourraient s’afficher par-dessus Briar : \n\n%1$s</string>
+  <string name="screen_filter_allow">Permettre à ces applis de s’afficher par-dessus</string>
+  <!--Permission Requests-->
+  <string name="permission_camera_title">Accès à la caméra</string>
+  <string name="permission_camera_request_body">Pour lire le code QR, Briar doit accéder à la caméra.</string>
+  <string name="permission_camera_denied_body">Vous avez refusé l’accès à la caméra, mais l’ajout de contacts exige l’utilisation de celle-ci.\n\nVeuillez envisager d’y accorder l’accès.</string>
+  <string name="permission_camera_denied_toast">L’accès à la caméra n’a pas été accordé</string>
 </resources>
