--- a/briar-android/src/main/res/values-it/strings.xml
+++ b/briar-android/src/main/res/values-it/strings.xml
@@ -31,9 +31,11 @@
   <string name="dialog_title_lost_password">Password persa</string>
   <string name="dialog_message_lost_password">Il tuo account Briar si trova cifrato sul tuo dispositivo e non nel cloud, quindi non possiamo resettarti la tua password. Vorresti cancellare il tuo account e partire di nuovo?\n\nAttenzione: Le tue identità, contatti e messaggi verranno persi permanentemente.</string>
   <string name="startup_failed_notification_title">Briar non è riuscito a partire</string>
-  <string name="startup_failed_notification_text">Potresti dover reinstallare Briar</string>
+  <string name="startup_failed_notification_text">Tocca per maggiori informazioni.</string>
   <string name="startup_failed_activity_title">Fallimento Avvio Briar</string>
-  <string name="startup_failed_db_error">Per qualche motivo il tuo database di Briar è danneggiato in modo irreversibile. Il tuo account, i tuoi dati e tutti i contatti sono persi. Sfortunatamente devi reinstallare Briar e creare un nuovo account.</string>
+  <string name="startup_failed_db_error">Per qualche motivo, il tuo database di Briar è danneggiato in modo irreparabile. Il tuo account, i tuoi dati e tutti i tuoi contatti sono perduti. Sfortunatamente devi reinstallare Briar e registrare un nuovo account scegliendo \'Ho dimenticato la password\'.</string>
+  <string name="startup_failed_data_too_old_error">Il tuo account è stato creato con una vecchia versione dell\'app e non può essere aperto in questa versione. Devi reinstallare la vecchia versione oppure eliminare l\'account vecchio scegliendo \'Ho dimenticato la password\'.</string>
+  <string name="startup_failed_data_too_new_error">Questa versione dell\'app è troppo vecchia. Aggiornala alla versione più recente e riprova.</string>
   <string name="startup_failed_service_error">Briar non è stato in grado di caricare un plugin richiesto. Reinstallare Briar di solito sistema questo problema. Però ricorda che perderai il tuo account e tutti i dati ad esso associati poichè Briar non usa server centralizzati per mantenere i tuoi dati.</string>
   <plurals name="expiry_warning">
     <item quantity="one">Questa è una versione di prova di Briar. Il tuo account scadrà fra %d giorno e non può essere rinnovato.</item>
@@ -83,7 +85,8 @@
   <string name="delete">Cancella</string>
   <string name="accept">Accetta</string>
   <string name="decline">Declina</string>
-	<string name="online">Connesso</string>
+  <string name="options">Opzioni</string>
+  <string name="online">Connesso</string>
   <string name="offline">Disconnesso</string>
   <string name="send">Invia</string>
   <string name="allow">Abilita</string>
@@ -94,6 +97,7 @@
   <string name="show_onboarding">Mostra l\'aiuto</string>
   <string name="fix">Correggi</string>
   <string name="help">Aiuto</string>
+  <string name="sorry">Scusa</string>
   <!--Contacts and Private Conversations-->
   <string name="no_contacts">Sembra che tu sia nuovo qui e non hai ancora contatti.\n\nPremi l\'icona in alto e segui le istruzioni per aggiungere qualche amico alla tua lista.\n\nPer favore ricorda: puoi solo aggiungere nuovi contatti faccia-a-faccia per evitare che altri ti impersonino o leggano i tuoi messaggi in futuro.</string>
   <string name="date_no_private_messages">Nessun messaggio.</string>
@@ -115,6 +119,7 @@
   <string name="contact_already_exists">Il contatto %s esiste già</string>
   <string name="contact_exchange_failed">Scambio di contatto fallito</string>
   <string name="qr_code_invalid">Il codice QR non è valido</string>
+  <string name="qr_code_unsupported">Il codice QR che state tentando di scansionare appartiene ad una vecchia versione di %s che non è più supportata.\n\nAssicuratevi entrambi di utilizzare la versione più recente e poi riprovare.</string>
   <string name="camera_error">Errore fotocamera</string>
   <string name="connecting_to_device">Connessione al dispositivo\u2026</string>
   <string name="authenticating_with_device">Autenticazione con il dispositivo\u2026</string>
@@ -368,7 +373,8 @@
   <string name="progress_title_logout">Uscire da Briar ...</string>
   <!--Screen Filters & Tapjacking-->
   <string name="screen_filter_title">È stata rilevata un\'overlay sullo schermo</string>
-  <string name="screen_filter_body">Un\'altra app sta disegnando sopra a Briar. Per proteggere la tua sicurezza, Briar non risponderà ai tocchi quando un\'altra app vi starà disegnando sopra.\n\nProva a spegnere le seguenti app mentre usi Briar:\n\n%1$s</string>
+  <string name="screen_filter_body">Un\'altra app si sta sovrapponendo a Briar. Per proteggere la tua sicurezza, Briar non risponderà ai tocchi quando un\'app si sovrappone.\n\nLe seguenti app potrebbero sovrapporsi:\n\n%1$s</string>
+  <string name="screen_filter_allow">Permetti a queste app di sovrapporsi</string>
   <!--Permission Requests-->
   <string name="permission_camera_title">Autorizzazione fotocamera</string>
   <string name="permission_camera_request_body">Per scansionare il codice QR, Briar deve accedere alla fotocamera.</string>
